# artpack-py

./: .gitignore  CHANGELOG.qmd  LICENSE  README.md  _quarto.yml  index.qmd  main.py  objects.json  pyproject.toml
.github/: CHANGELOG.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: python-publish.yml  quarto-publish.yml  release.yml  tests.yml
artpack/: __init__.py  _utils.py  circle_data.py  circles.py  palettes.py
assets/: styles.css
docs/: index.html  search.json
docs/reference/: art_pals.html  index.html
reference/: _sidebar.yml  art_pals.qmd  circle_data.qmd  index.qmd
scripts/: post-render.py  sync_readme.py
tests/: test_art_pals.py  test_circles.py  test_main.py  test_palettes.py  test_utils.py
