[project]
name = "artpack"
version = "0.1.0"
description = "Create data that displays generative art when mapped into a 'plotnine' plot. Functionality includes specialized data frame creation for geometric shapes, tools that define artistic color palettes, tools for geometrically transforming data, and other miscellaneous tools that are helpful when using 'plotnine' for generative art."
authors = [
    {name = "Meghan S. Harris", email = "meghanha01@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

#[project.urls]
#Homepage = "https://github.com/yourusername/artpack"
#Repository = "https://github.com/yourusername/artpack"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/artpack"]

[dependency-groups]
dev = [
    "pytest>=7.0",
]